telemetry/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: telemetry
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.justgui.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: letsencrypt
